{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "3ab2ea20-bc75-4d55-ac8d-030fd7b3d64e",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "94a40ede-b98a-4404-b868-bb0b7fc0a27a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d7a94907-a221-44f5-a96c-cf20039f95c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "a8c4e7bc-9dbc-45ba-b628-16c576bf742a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1f05c0f-97b5-4b20-aa07-1b2cc4f9de39",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8b06069-9f4b-41dd-8099-a462f9040f7d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4edbaca6-f8b0-4cde-8929-c32524e981bd",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}