{
    "name": "touchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "94b70ee1-3ef9-4b4f-ab0e-bc622335184b",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "129086f5-781f-4019-8dce-3dbeaf958772",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "b7386bc6-ddbc-4842-8a61-2c9e49193dc6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c4e0d7e-4d4b-4251-b846-8954e9a210a5",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cee9336-4db9-4023-944e-97e459d6abb3",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(pressPoint=1)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}